--- a/web/index.html
+++ b/web/index.html
@@ -60,7 +60,7 @@
          <!-- SLIDERS -->
          <section class="container-fluid">
             <div id="mainSlider" class="carousel slide" data-ride="carousel">
-               <ol class="carousel-indicators m-0 p-0 my-5 py-5">
+               <ol class="carousel-indicators m-0 p-0">
                   <li data-target="#mainSlider" data-slide-to="0" class="active"></li>
                   <li data-target="#mainSlider" data-slide-to="1"></li>
                   <li data-target="#mainSlider" data-slide-to="2"></li>
