--- a/web/noticias-geek.html
+++ b/web/noticias-geek.html
@@ -5,7 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Noticias Geek</title>
-      <link rel="shortcut icon" href="./assets/img/logo-back/spider.svg" type="image/x-icon">
+      <link rel="shortcut icon" href="./assets/img/logo/spider.svg" type="image/x-icon">
 
       <!-- Fonte Roboto -->
       <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -36,7 +36,7 @@
          <div class="container" id="nav-container">
             <nav class="py-1 navbar navbar-expand-lg fixed-top">
                <a href="#" class="navbar-brand">
-                  <img src="./assets/img/logo-back/logo-mg.svg" alt="Logo Star Wars" id="logo">
+                  <img src="./assets/img/logo/logo-mg.svg" alt="Logo Star Wars" id="logo">
                </a>
                
                <button type="button" class="navbar-toggler navbar-dark" data-toggle="collapse" data-target="#navbar-links" aria-controls="navbar-links" aria-expanded="false" aria-label="Toggle navigation">
