--- a/web/noticias-geek.html
+++ b/web/noticias-geek.html
@@ -5,7 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Noticias Geek</title>
-      <link rel="shortcut icon" href="./assets/img/logo-back/spider.svg" type="image/x-icon">
+      <link rel="shortcut icon" href="./assets/img/logo/spider.svg" type="image/x-icon">
 
       <!-- Fonte Roboto -->
       <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -17,7 +17,7 @@
 
       <!-- Bootstrap -->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-      <link rel="stylesheet" href="./assets/css/style-star copy.css">
+      <link rel="stylesheet" href="./assets/css/style-geek.css">
       
       <!-- Scripts -->
       <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -36,7 +36,7 @@
          <div class="container" id="nav-container">
             <nav class="py-1 navbar navbar-expand-lg fixed-top">
                <a href="#" class="navbar-brand">
-                  <img src="./assets/img/logo-back/logo-mg.svg" alt="Logo Star Wars" id="logo">
+                  <img src="./assets/img/logo/logo-mg.svg" alt="Logo Star Wars" id="logo">
                </a>
                
                <button type="button" class="navbar-toggler navbar-dark" data-toggle="collapse" data-target="#navbar-links" aria-controls="navbar-links" aria-expanded="false" aria-label="Toggle navigation">
