--- a/web/index.html
+++ b/web/index.html
@@ -24,9 +24,6 @@
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 
-      <!-- Font Awesome -->
-       <script src="https://kit.fontawesome.com/bf7e05c402.js" crossorigin="anonymous"></script>
-
       <!-- Parallax -->
       <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
    </head>
@@ -92,7 +89,7 @@
                         <p class="d-none d-lg-flex">DEZENOVE ANOS ATRÁS, um surto de um fungo parasita matou a maioria da população mundial. Em umas das poucas zonas de quarentena restantes, Ellie, treze anos, começa sua nova vida como uma das alunas de uma escola militar, onde uma amizade com a colega Riley a levará ao seu primeiro passeio do lado de fora. Ellie e Riley logo se confrontam com os violentos Vaga-Lumes.</p>
 
                         <p class="p-sm d-md-flex d-lg-none">
-                           The last of us: Ellie, treze anos, começa sua nova vida como uma das alunas de uma escola militar, onde uma amizade com a colega Riley a levará ao seu primeiro passeio do lado de fora.
+                           <strong>The last of us:</strong> Ellie, treze anos, começa sua nova vida como uma das alunas de uma escola militar, onde uma amizade com a colega Riley a levará ao seu primeiro passeio do lado de fora.
                         </p>
                      </div>
                   </div>
@@ -106,7 +103,7 @@
                         <p class="d-none d-lg-flex">Miles Morales é um personagem presente nos quadrinhos da Marvel Comics, que apareceu pela primeira vez em Ultimate Fallout #4, após a morte de Peter Parker. Um adolescente negro com ascendência hispânica, Miles é o segundo Homem-Aranha a aparecer em Ultimate Marvel, e com uma continuação no Universo Marvel principal.</p>
                         
                         <p class="p-sm d-md-flex d-lg-none">
-                           Spider-Man: Um adolescente negro com ascendência hispânica, Miles é o segundo Homem-Aranha a aparecer em Ultimate Marvel, e com uma continuação no Universo Marvel principal.
+                           <strong>Spider-Man:</strong> Um adolescente negro com ascendência hispânica, Miles é o segundo Homem-Aranha a aparecer em Ultimate Marvel, e com uma continuação no Universo Marvel principal.
                         </p>
                      </div>
                   </div>
@@ -120,7 +117,7 @@
                         <p class="d-none d-lg-flex">O Imperador governa a galáxia com punho de ferro e de sua ditadura implacável dissidentes começam a aparecer. Não me refiro, porém, à Aliança Rebelde – essa sim já existe, mas não é o foco deste primeiro arco de Star Wars – Império. Similarmente ao que veríamos posteriormente em Darth Vader e a Prisão Fantasma, Traição nos conta a história de uma pequena insurgência dentro do próprio Império.</p>
 
                         <p class="p-sm d-md-flex d-lg-none">
-                           Star-wars: O enredo é permeado pela tragédia pessoal de Anakin Skywalker, um jedi (do bem) que sucumbe ao Lado Sombrio da Força (do mal) se transformando no vilão Darth Vader, que é um dos líderes do Império Galático.
+                           <strong>Star-wars:</strong> O enredo é permeado pela tragédia pessoal de Anakin Skywalker, um jedi (do bem) que sucumbe ao Lado Sombrio da Força (do mal) se transformando no vilão Darth Vader, que é um dos líderes do Império Galático.
                         </p>
                      </div>
                   </div>
